# aoc2020

./: Cargo.toml
data/: day1.txt
src/: template.rs
src/day1/: a.rs  b.rs
src/day10/: a.rs  b.rs
src/day11/: b.rs
src/day12/: a.rs  b.rs
src/day13/: a.rs  b.rs
src/day14/: a.rs  b.rs
src/day15/: a.rs  b.rs
src/day16/: a.rs  b.rs
src/day2/: a.rs  b.rs
src/day3/: a.rs  b.rs
src/day4/: a.rs  b.rs
src/day5/: a.rs
src/day6/: a.rs  b.rs
src/day7/: a.rs  b.rs
src/day8/: a.rs  b.rs
src/day9/: a.rs  b.rs
