[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "day1a"
path = "src/day1/a.rs"

[[bin]]
name = "day1b"
path = "src/day1/b.rs"


[[bin]]
name = "day2a"
path = "src/day2/a.rs"

[[bin]]
name = "day2b"
path = "src/day2/b.rs"




[dependencies]
nom = "6.0.1"


