[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "day1a"
path = "src/day1/a.rs"

[[bin]]
name = "day1b"
path = "src/day1/b.rs"


[[bin]]
name = "day2a"
path = "src/day2/a.rs"

[[bin]]
name = "day2b"
path = "src/day2/b.rs"


[[bin]]
name = "day3a"
path = "src/day3/a.rs"

[[bin]]
name = "day3b"
path = "src/day3/b.rs"


[[bin]]
name = "day4a"
path = "src/day4/a.rs"

[[bin]]
name = "day4b"
path = "src/day4/b.rs"


[[bin]]
name = "day5a"
path = "src/day5/a.rs"

[[bin]]
name = "day5b"
path = "src/day5/b.rs"


[[bin]]
name = "day6a"
path = "src/day6/a.rs"

[[bin]]
name = "day6b"
path = "src/day6/b.rs"


[[bin]]
name = "day7a"
path = "src/day7/a.rs"

[[bin]]
name = "day7b"
path = "src/day7/b.rs"


[[bin]]
name = "day8a"
path = "src/day8/a.rs"

[[bin]]
name = "day8b"
path = "src/day8/b.rs"


[[bin]]
name = "day9a"
path = "src/day9/a.rs"

[[bin]]
name = "day9b"
path = "src/day9/b.rs"


[[bin]]
name = "day10a"
path = "src/day10/a.rs"

[[bin]]
name = "day10b"
path = "src/day10/b.rs"


[[bin]]
name = "day11a"
path = "src/day11/a.rs"

[[bin]]
name = "day11b"
path = "src/day11/b.rs"


[[bin]]
name = "day12a"
path = "src/day12/a.rs"

[[bin]]
name = "day12b"
path = "src/day12/b.rs"


[[bin]]
name = "day13a"
path = "src/day13/a.rs"

[[bin]]
name = "day13b"
path = "src/day13/b.rs"


[[bin]]
name = "day14a"
path = "src/day14/a.rs"

[[bin]]
name = "day14b"
path = "src/day14/b.rs"


[[bin]]
name = "day15a"
path = "src/day15/a.rs"

[[bin]]
name = "day15b"
path = "src/day15/b.rs"


[[bin]]
name = "day16a"
path = "src/day16/a.rs"

[[bin]]
name = "day16b"
path = "src/day16/b.rs"




[dependencies]
nom = "6.0.1"
vector2d = "2.2.0"
scan_fmt = "0.2.5"

